# monitor

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  prometheus.yml
include/: expose_metrics.h  metrics.h
lib/: README.md
lib/prom/: CMakeLists.txt
lib/promhttp/: CMakeLists.txt
lib/promhttp/src/: promhttp.c
src/: config.json  expose_metrics.c  main.c  metrics.c
